src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_cable_banner_combos_terminal_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                          DROID: cable_banner_combos                          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Controller 1 ────────────────────────────────────────────────────────────────┐
│┌ ○ Button B1.1┐                                                              │
││     OFF ○    │                                                              │
│└──────────────┘                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│  ← Contour O1                                                                │
│     CV OUT                                                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
























┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 2 cells / 2 cables | Scale: 1│
└──────────────────────────────────────────────────────────────────────────────┘
