src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_source_navigation_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                               DROID: source_navigation                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌───┐
◉ ◉…  CV…
0%0%│   │
│  ││   │
│  ││   │
│  ││   │
│  │▶▶  │
│  │……  │
│  ││   │
│  ││   │
│  │▶▶  │
│○○│……  │
│……││   │
│  ││   │
│  │▶▶  │
│○○│……  │
│○○││   │
│  ││   │
│  │▶▶  │
│  │……  │
│○○││   │
│……││   │
│  ││   │
│  ││   │
│○○││   │
│○○││   │
│  ││   │
│  ││   │
│  ││   │
│  ││   │
│  ││   │
│  ││   │
│  ││   │
└──┘└───┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 2 cells / 2 cables | Renders degraded at 120 cols — use ≥ 420 cols or│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
