src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_source_navigation_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: source_navigation                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ B1.1 ──────┐┌ ○ B1.2 ──────┐┌ ○ B1.3 ──────┐     ○ B1.4                   │
││     OFF ○    ││     OFF ○    ││     OFF ○    │       OFF                    │
│└──────────────┘└──────────────┘└──────────────┘                              │
│     ○ L1.4          ○ B1.5          ○ L1.5          ○ B1.6                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ○ L1.6          ○ B1.7          ○ L1.7          ○ B1.8                   │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│     ○ L1.8          ◉ P1.1          ◉ P1.2                                   │
│       OFF             0%              0%                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│    ← Copy O1       ← Copy O2       ← Copy O3      ← Switch O4                │
│     CV OUT          CV OUT          CV OUT          CV OUT                   │
│                                                                              │
│   ← Switch O5     ← Switch O6      ← Copy O7       ← Copy O8                 │
│     CV OUT          CV OUT          CV OUT          CV OUT                   │
│                                                                              │
│   ← Switch O9    ← Switch O10    ← Switch O11                                │
│     CV OUT          CV OUT          CV OUT                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘









┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 2 cells / 2 cables | Scale: 1│
└──────────────────────────────────────────────────────────────────────────────┘
