src/snapshots/droid_tui__regression__visual_modifier_highlight_matrix_snapshot@modifier_source_navigation_terminal_80.snap
---
source: src/regression.rs
assertion_line: 2656
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: source_navigation                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 ────────────────────────────────────────────────────────────────────────┐
│┌ ○ Button B1.1┐┌ ○ Button B1.2┐┌ ○ Button B1.3┐  ○ Button B1.4               │
││     OFF ○    ││     OFF ○    ││     OFF ○    │       OFF                    │
│└──────────────┘└──────────────┘└──────────────┘                              │
│   ○ LED L1.4     ○ Button B1.5    ○ LED L1.5     ○ Button B1.6               │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│   ○ LED L1.6     ○ Button B1.7    ○ LED L1.7     ○ Button B1.8               │
│       OFF             OFF             OFF             OFF                    │
│                                                                              │
│   ○ LED L1.8      ◉ Pot P1.1      ◉ Pot P1.2                                 │
│       OFF             0%              0%                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O ──────────────────────────────────────────────────────────────────────┐
│   ← Output O1     ← Output O2     ← Output O3     ← Output O4                │
│     CV OUT          CV OUT          CV OUT          CV OUT                   │
│                                                                              │
│   ← Output O5     ← Output O6     ← Output O7     ← Output O8                │
│     CV OUT          CV OUT          CV OUT          CV OUT                   │
│                                                                              │
│   ← Output O9    ← Output O10    ← Output O11                                │
│     CV OUT          CV OUT          CV OUT                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘









┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | MOD B1.1 → 2 cells / 2 cables | Scale: 1│
└──────────────────────────────────────────────────────────────────────────────┘
