src/snapshots/droid_tui__regression__visual_modifier_shift_plus_modifier_snapshot@modifier_shift_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: modifier_switch_passthrough                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ P2B8 [SHIFT 1] ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ○ Button B1.1    ○ LED L1.1     ○ Button B1.2    ○ LED L1.2     ○ Button B1.3    ○ LED L1.3     ○ Button B1.4       │
│       OFF             OFF             OFF             OFF             OFF             OFF             OFF            │
│                                                                                                                      │
│   ○ LED L1.4     ○ Button B1.5    ○ LED L1.5     ○ Button B1.6    ○ LED L1.6     ○ Button B1.7    ○ LED L1.7         │
│       OFF             OFF             OFF             OFF             OFF             OFF             OFF            │
│                                                                                                                      │
│  ○ Button B1.8    ○ LED L1.8      ◉ Pot P1.1      ◉ Pot P1.2                                                         │
│       OFF             OFF             0%              0%                                                             │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ CV I/O [SHIFT 1] ────────────────────────────────────────────────────────────────────────────────────────────────────┐
│   ← Output O1     ← Output O2     ← Output O4                                                                        │
│     CV OUT          CV OUT          CV OUT                                                                           │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘


















┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | SHIFT 1 ACTIVE | MOD B1.1 → 15 cells / 9 cables | Renders degraded at 120 cols —│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
